--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,4 +1,4 @@
-title: Zajac & Leroy
+title: Zajac & Leroy Physio
 description: Kontakt, Termine und Öffnungszeiten
 contact:
   phone: +49 2428 9 058 509
