--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,5 +1,5 @@
-title: Zajac & Leroy Physio
-description: Kontakt, Termine und Öffnungszeiten
+title: Zajac & Leroy
+description:
 contact:
   phone: +49 2428 9 058 509
   email: info@zl-physio.de
