updated sub title

--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -1,5 +1,5 @@
-#logo_image: uploads/logo.png
-logo_subtitle:
+logo_image:
+logo_subtitle: Physio
 dark_header: false
 mobile_view_width: 1100
 menuitems:
