--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -15,5 +15,5 @@ menuitems:
     link: /aktuelles/
 cta:
   active: true
-  title: Kontakt & Öffungszeiten
+  title: Kontakt, Öffungszeiten & Termine
   link: /kontakt/
