updated favicon image

--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -1,4 +1,4 @@
-favicon_image: /uploads/branding/chiropractic-physiotherapy-svgrepo-com.svg
+favicon_image: /uploads/logo.png
 color_name: red
 sticky_header: true
 dark_header: false
