--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -1,5 +1,7 @@
 logo_image:
 menuitems:
+  - title: © 2014 - 2025 Zajac & Leroy Physio
+    link: https://zl-physio.de
   - title: Impressum
     link:  /impressum/
   - title: Datenschutzerklärung
