updated dummy avatars

--- a/data/en/people.yaml
+++ b/data/en/people.yaml
@@ -1,28 +1,28 @@
 - name: Zdobek Zajac
   function: Physiotherapeut Bc. (NL)
-  image: /uploads/photos/avatars/male_profile_picture.jpg
+  image: /uploads/photos/avatars/male_profile_picture.png
 - name: Michael Leroy
   function: Physiotherapeut Bc. (NL), Manualtherapeut M.Sc. (NL), Lymphdrainage, Sportphysiotherapie, Dozent für Physiotherapie an der Hogeschool Zuyd in Heerlen
-  image: /uploads/photos/avatars/male_profile_picture.jpg
+  image: /uploads/photos/avatars/male_profile_picture.png
 - name: Jolante Zajac
   function: Physiotherapeutin Bc. (PL), Bobath-Therapeutin Kinder und Erwachsene, Lymphdrainage
-  image: /uploads/photos/avatars/female_profile_picture.jpg
+  image: /uploads/photos/avatars/female_profile_picture.png
 - name: Kai Witzel
   function: Physiotherapeut Bc (NL), Sportphysiotherapie Master (D), Lymphdrainage
-  image: /uploads/photos/avatars/male_profile_picture.jpg
+  image: /uploads/photos/avatars/male_profile_picture.png
 - name: Burak Dokuyucu
   function: Physiotherapeut Bc (NL), Sportphysiotherapie Master (D)
-  image: /uploads/photos/avatars/male_profile_picture.jpg
+  image: /uploads/photos/avatars/male_profile_picture.png
 - name: Moritz Weyergraf
   function: Physiotherapeut Bc (NL), Lymphdrainage
-  image: /uploads/photos/avatars/male_profile_picture.jpg
+  image: /uploads/photos/avatars/male_profile_picture.png
 - name: Sandra Popp
   function: Verwaltung
   description: 02428/9 058 509
   phone: 02428/9 058 509
-  image: /uploads/photos/avatars/female_profile_picture.jpg
+  image: /uploads/photos/avatars/female_profile_picture.png
 - name: Birgit Wolff
   function: Verwaltung
   description: 02428/9 058 509
   phone: 02428/9 058 509
-  image: /uploads/photos/avatars/female_profile_picture.jpg
+  image: /uploads/photos/avatars/female_profile_picture.png
