updated email link

--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -2,4 +2,4 @@ title: "Zajac & Leroy"
 description:
 contact:
   phone: +49 2428 9 058 509
-  email: mailto:info@zl-physio.de?subject=Kontaktanfrage%20via%20Website
+  email: info@zl-physio.de?subject=Kontaktanfrage%20via%20Website
